--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.DS_Store
+node_modules
+/dist
 
-# Test binary, build with `go test -c`
-*.test
+# local env files
+.env.local
+.env.*.local
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+node_modules
