Check workflow for the docker-compose file.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers usind docker-compose
-        run: docker-compose up -d
+        run: |
+          ls
+          docker-compose up -d
   test:
     runs-on: macos-latest
     needs: [ build ]
