--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,13 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers usind docker-compose
         run: |
           ls
           docker-compose up -d
-  test:
-    runs-on: macos-latest
-    needs: [ build ]
-    steps:
-      - uses: actions/checkout@v2
       - name: Testing API
         run: sh test_api.sh
-        working-directory: /tests/postman/
+        working-directory: ./tests/postman
