--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
         run: |
           ls
           docker-compose up -d
-      - uses: matt-ball/newman-action@master
       - name: Testing API
-        run: sh test_api.sh
+        run: |
+          npm install -g newman 
+          sh test_api.sh
         working-directory: ./tests/postman
