--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           ls
           docker-compose up -d
+      - uses: matt-ball/newman-action@master
       - name: Testing API
-        run: |
-          npm install newman 
-          sh test_api.sh
-        working-directory: ./tests/postman
+        with:
+          collection: ./tests/postman/sponsors.postman_collection.json
+          envionrment: ./tests/postman/sponsors.postman_collection.json
