--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           ls
           docker-compose up -d
-      - name: Testing API
-        run: |
-          npm install newman
-          newman run *.json
+      - name: Downloading newman
+        run: npm install newman
+      - name: Running API Tests
+        run: newman run *.json
         working-directory: ./tests/postman
