--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers usind docker-compose
-        run: |
-          ls
-          docker-compose up -d
+        run: docker-compose up -d
+      - name: Golang Tests
+        run: go test
+        working-directory: ./server
