--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,25 +1,20 @@
-version: '3'
-services: 
+# Docker compose development version 
+version: "3"
+services:
     api:
         image: api
-        build: .
-        ports: 
-            - 1323:1323
+        build: ./
+        ports:
+            - '1323:1323'
+        volumes:
+            - ./:/app/
+            - /app/dist
         container_name: api
+        environment: 
+            - CHOKIDAR_USEPOLLING=true
     mongo:
         image: mongo:latest
         restart: always
         ports:
             - 27017:27017
         container_name: mongo
-    mongo-express:
-        image: mongo-express
-        restart: always
-        environment: 
-            - ME_CONFIG_MONGODB_SERVER=mongo
-            - ME_CONFIG_MONGODB_PORT=27017
-        ports:
-            - 8081:8081
-        depends_on: 
-            - mongo
-        container_name: mongo-express
