--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,12 +1,29 @@
-# Base image node to install Vue dependencies
-FROM node:14.2 AS build-stage
+# Run base image from node
+FROM node:latest AS builder
 
+# Set working directory
 WORKDIR /app
 
-# Install dependencies in separate step to cache
-COPY package.json ./
-RUN yarn install
+# Copy files into container
+COPY . /app/
 
-# Build dependencies into dist folder, copy line may change as we restructure
-COPY . .
-ENTRYPOINT yarn serve
+# Install yarn build dependencies
+RUN yarn install
+RUN yarn build
+
+# Multi stage build to enable code for static files to be served
+FROM golang:1.13-buster AS server
+
+# Copy the files from stage builder into this stage
+COPY --from=builder /app /app
+
+# Set the working directory
+WORKDIR /app/server/
+
+# Build dependencies 
+RUN go mod download
+
+# Build and run the server
+RUN go build -o  main .
+EXPOSE 1323
+CMD [ "./main" ]
