Fix Docker issue where the backend CompileDaemon fails

--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -1,11 +1,11 @@
 # Base image changed to go to run Go commands
 FROM golang:1.13-buster as production-stage
 
-# Copy the dist folder into the new container
-WORKDIR /app/server
-
 # Copy server files 
-COPY ./ /app/server
+COPY ./ /~/app/server
+
+# Set working server directory
+WORKDIR /~/app/server
 
 # Build go dependencies
 RUN go mod download
@@ -17,4 +17,4 @@ RUN go get github.com/githubnemo/CompileDaemon
 EXPOSE 1323
 
 # Run go build and execute the ./main file generated
-ENTRYPOINT CompileDaemon --build="go build -o main ." --command=./main
+ENTRYPOINT CompileDaemon --build="go build -o main ." --command="./main"
