Remove Docker volumes from the backend
The server app was stored in a folder named '~' in the docker container. This change allows it to now be in the root directory.

--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -2,10 +2,10 @@
 FROM golang:1.13-buster as production-stage
 
 # Copy server files 
-COPY ./ /~/app/server
+COPY ./ /app/server
 
 # Set working server directory
-WORKDIR /~/app/server
+WORKDIR /app/server
 
 # Build go dependencies
 RUN go mod download
