CW-125 Add doc files to the repo so CI works
The Dockerfile now removes the current docs directory and recreates when executed.

--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -12,6 +12,8 @@ RUN go mod download
 
 # Generate swag documentation
 RUN go get github.com/swaggo/swag/cmd/swag
+# Recreate docs directory
+RUN rm -Rf docs
 RUN swag init
 
 # Daemon to run go build automatically when new files are changed on host system
