Fix Docker files to work with volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         build: ./backend/server
         ports:
             - '1323:1323'
+        volumes:
+            - ./backend/server:/app/server
         container_name: backend
     mongo:
         image: mongo:latest
