CW-70 Update API documentation (#53)
* Create initial API framework

* CW-118 Refactored sponsors

* CW-118 Fix naming convention of API endpoints

- Added the API version to the endpoint prefix => /api/v1.
- Cleaned up server.go and fixed up comments
- Print progress of server startup

* CW-70 Add Swaggo modules and SwaggerUI endpoint

* CW-118 Fix trailing slash issue on URIs

The trailing slash on URIs was causing the tests to fail, as they were inconsistent throughout the backend server files.
e.g. /api/v1/faq != /api/v1/faq/

* CW-118 Break down API structure into groups

* restructured to APIClient and tested

* CW-70 Fix typo, missing slash

* CW-118 Unify sponsor endpoints

This new arrangement makes it intuitive to find things.

* CW-118 Remove 'middleware' function

Removed because it's not being used and it was implemented wrongly.

* CW-118 Fix naming inconsistencies

* CW-118 Fix URI path

* CW-118 Fix another typo

* Reverted local api url

* Fix Docker issue where the backend CompileDaemon fails

* CW-119 Add godoc for GetSponsor

Testing the doc generation for a single endpoint first.

* Remove Docker volumes from the backend

The server app was stored in a folder named '~' in the docker container. This change allows it to now be in the root directory.

* CW-125 Generate Swagger doc files dynamically in docker

* CW-125 Add doc files to the repo so CI works

The Dockerfile now removes the current docs directory and recreates when executed.

* CW-119 Add docstrings to Sponsor related API endpoints

* CW-119 Fix wrong failure message in documentation

* CW-119 Add docstrings to Mailing related API endpoints

To do this I had to split the HandleMessage() function into 3 separate handlers => one for each API endpoint.

* CW-70 Ensure every endpoint has intuitive error responses

Returning the error returned by the function that triggered the error isn't always useful.
In this commit I wrot

--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -1,7 +1,7 @@
 # Base image changed to go to run Go commands
 FROM golang:1.13-buster as production-stage
 
-# Copy the dist folder into the new container
+# Set working server directory
 WORKDIR /app/server
 
 # Copy server files 
@@ -10,6 +10,10 @@ COPY ./ /app/server
 # Build go dependencies
 RUN go mod download
 
+# Generate swag documentation
+RUN go get github.com/swaggo/swag/cmd/swag
+RUN swag init
+
 # Daemon to run go build automatically when new files are changed on host system
 RUN go get github.com/githubnemo/CompileDaemon
 
@@ -17,4 +21,4 @@ RUN go get github.com/githubnemo/CompileDaemon
 EXPOSE 1323
 
 # Run go build and execute the ./main file generated
-ENTRYPOINT CompileDaemon --build="go build -o main ." --command=./main
+ENTRYPOINT CompileDaemon --build="go build -o main ." --command="./main"
