CW-105 Clean up Backend repository (#59)
* Finished clean backend repo

* changed to localhost

* Configured go test to run all tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Building docker containers using docker-compose
         run: docker-compose up -d
       - name: Golang Tests
-        run: go test
+        run: go test ./...
         working-directory: ./backend/server
