--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Dump Mailjet token into a file
+        env:
+          MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
+        run: mkdir tokens && touch tokens/mailjet.txt && echo $MAILJET_TOKEN > tokens/mailjet.txt
       - name: Building docker containers using docker-compose
         run: docker-compose up -d
       - name: Golang Tests
