CW-150 Safe token storage (#65)
* CW-150 Update gitignore to include the tokens directory containing the secrets

This is to prevent secrets from being tracked by git.

* CW-150 Add secrets' locations to the docker-compose file

* CW-150 Read secret and use it to authenticate Mailjet

Wrote a function in utils.go to make the process of retrieving secrets easier.

* CW-150 Update GitHub Actions CI

The plan is to dump GitHub Secrets into txt files, which is what Docker (docker-compose) expects.

* CW-150 Use env variables instead of Docker secrets

Shoutout to Gordon's comprehensive explanation :)

* CW-150 Update GitHub Actions workflow

This new implementation dumps the GitHub Secrets on the .env file.

* CW-150 Remove debugging message

* CW-150 Revert back to former Docker version

* CW-150 Simplify CI file to pass in the env variables directly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         volumes:
             - ./backend:/app/server
         container_name: backend
+        environment: 
+            - MAILJET_TOKEN=${MAILJET_TOKEN}
     mongo:
         image: mongo:latest
         restart: always
