--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers using docker-compose
+        env:
+          MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
         run: docker-compose up -d
       - name: Golang Tests
         run: go test ./...
