--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,37 @@
 {
-    "name": "csesoc-website",
-    "version": "0.9.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "core-js": "^2.6.5",
-        "vue": "^2.6.10",
-        "vue-router": "^3.0.3",
-        "vuetify": "^2.0.0",
-        "webpack": "^4.43.0"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.11.0",
-        "@vue/cli-plugin-eslint": "^3.11.0",
-        "@vue/cli-service": "^3.11.0",
-        "@vue/eslint-config-airbnb": "^4.0.0",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "sass": "^1.17.4",
-        "sass-loader": "^7.1.0",
-        "vue-cli-plugin-vuetify": "^0.6.3",
-        "vue-template-compiler": "^2.6.10",
-        "vuetify-loader": "^1.2.2"
-    }
+  "name": "csesoc-website",
+  "version": "0.9.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit --setupTestFrameworkScriptFile=./tests/setup.js",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "core-js": "^2.6.5",
+    "vue": "^2.6.10",
+    "vue-router": "^3.3.4",
+    "vuetify": "^2.3.4",
+    "webpack": "^4.43.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "~4.4.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.6.0"
+  },
+  "peerDependencies": {
+    "webpack": "^4.43.0"
+  }
 }
