--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Vue Testing
-      - run: yarn run test:unit
+        run: yarn run test:unit
         working-directory: ./frontend
