--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
-      - run: npm install -g @vue/cli@latest
+      - run: npm install
       - name: Vue Testing
         run: yarn run test:unit
         working-directory: ./frontend
