Start backend test without frontend container.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Building docker containers using docker-compose
         env:
           MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
-        run: docker-compose up -d
+        run: docker-compose up -d --build backend mongo
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
