Update README.md (#74)
* Update README with latest practices.

* Edit CI workflow to allow frontend testing.

* Fix syntax error.

* Fix syntax error.

* Install frontend testing dependencies.

* Remove specific npm install.

* Remove frontend testing CI workflow.

* Start backend test without frontend container.

* Update for frontend testing.

* Update README.md

Implemented changes suggested by Sergio.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
+  backend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers using docker-compose
         env:
           MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
-        run: docker-compose up -d
+        run: docker-compose up -d --build backend mongo
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
