--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,9 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "~4.5.2",
+    "@vue/cli-plugin-eslint": "~4.5.2",
+    "@vue/cli-service": "~4.5.2",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.0.1",
