--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,25 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/cli-plugin-babel": "~4.5.2",
+    "@vue/cli-plugin-eslint": "~4.5.2",
+    "@vue/cli-service": "~4.5.2",
+    "@vue/eslint-config-airbnb": "^5.1.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.0.1",
     "cypress": "^4.12.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.10",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.3",
+    "sass-loader": "^9.0.3",
+    "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.6.0"
   },
