--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.0.1",
     "cypress": "^4.12.1",
     "eslint": "^7.6.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
