--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "validator": "^13.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.4",
