--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@vue/eslint-config-airbnb": "^5.1.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.0.1",
+    "css-loader": "^4.2.2",
     "cypress": "^4.12.1",
     "eslint": "^7.6.0",
     "eslint-plugin-cypress": "^2.11.1",
