--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master, dev, feat/*, fix/*, hotfix/* ]
+    branches: [ master, dev ]
   pull_request:
     branches: [ master, dev ]
 
