--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,6 @@ jobs:
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
+      - name: Cypress Tests
+        uses: cypress-io/github-action@v2
+        working-directory: ./frontend/
