Change invalid relative directory address.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: docker-compose up -d --build backend mongo
       - name: Golang Tests
         run: go test ./...
-        working-directory: ./backend/server
+        working-directory: /backend/server
       - name: Cypress Tests
         uses: cypress-io/github-action@v2
-        working-directory: ./frontend
+        working-directory: /frontend
