--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Golang Tests
         run: go test ./...
         working-directory: /backend/server
-      - name: Cypress Tests
-        uses: cypress-io/github-action@v2
+      # - name: Cypress Tests
+      #   uses: cypress-io/github-action@v2
