--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
         run: go test ./...
         working-directory: ./backend/server
       - name: Cypress Tests
-        uses: cypress-io/github-action@v2
+      - uses: cypress-io/github-action@v2
         with:
-          project: ./frontend
+          working-directory: ./frontend
