--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   backend:
     runs-on: ubuntu-latest
+    container: cypress/included:3.8.3
     steps:
       - uses: actions/checkout@v2
       - name: Building docker containers using docker-compose
@@ -24,6 +25,5 @@ jobs:
         run: go test ./...
         working-directory: ./backend/server
       - name: Cypress Tests
-        uses: cypress-io/github-action@v2
-        with:
-          project: ./frontend
+        run: cypress run
+        working-directory: ./frontend
