--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,13 @@ jobs:
         working-directory: ./backend/server
       - uses: actions/setup-node@v1
       - name: Run frontend server
-      - run: yarn install
-      - run: yarn serve
+          run: yarn install
+          working-directory: /frontend
+      # - uses: cypress-io/github-action@v1
+      #     with:
+      #       start: yarn serve
+      #       wait-on: http://localhost:3030 
+      #       working-directory: /frontend
       # - name: Cypress Tests
       #   uses: cypress-io/github-action@v2
       #   with:
