--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # - name: Building docker containers using docker-compose
-      #   env:
-      #     MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
-      #   run: docker-compose up -d --build backend mongo
-      # - name: Golang Tests
-      #   run: go test ./...
-      #   working-directory: ./backend/server
+      - name: Building docker containers using docker-compose
+        env:
+          MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
+        run: docker-compose up -d --build backend mongo
+      - name: Golang Tests
+        run: go test ./...
+        working-directory: ./backend/server
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
