--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,16 @@ jobs:
         with:
           node-version: '12.x'
       - name: Install dependencies
-        run: npm install
+        run: yarn
         working-directory: ./frontend
       - name: Check directory
-        run: ls /frontend
+        run: ls ./frontend
       - name: Cypress Tests
         uses: cypress-io/github-action@v1
         with:
-          start: npm run serve
+          start: yarn serve
           wait-on: http://localhost:3030 
-          working-directory: /frontend
+          working-directory: ./frontend
       #   uses: cypress-io/github-action@v2
       #   with:
       #     working-directory: ./frontend
