--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master, dev, feat/*, fix/*, hotfix/* ]
+    branches: [ master, dev ]
   pull_request:
     branches: [ master, dev ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  backend:
+  testing:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,3 +23,16 @@ jobs:
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install dependencies
+        run: yarn
+        working-directory: ./frontend
+      - name: Cypress Tests
+        uses: cypress-io/github-action@v1
+        with:
+          start: yarn serve
+          wait-on: http://localhost:8080 
+          working-directory: ./frontend
