Ignore any video output from Cypress runs (#109)
* Ignore any video output from Cypress runs

* Ignore screenshots produced by failures

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,7 @@ backend/main
 # vscode configurations
 **/.vscode/
 .vs
+
+# cypress output
+frontend/cypress/videos/
+frontend/cypress/screenshots/
