Read testing JWT from environment variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          TESTING_JWT: ${{ secrets.TESTING_JWT }}
         run: docker-compose up -d --build backend mongo
       - name: Golang Tests
         run: go test ./...
