--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,8 +3,11 @@ services:
   production:
     image: production
     build: .
+    restart: always
     ports: 
       - '1323:1323'
+    security_opt:
+      - no-new-privileges
     depends_on:
       - mongo
     container_name: production
@@ -13,5 +16,7 @@ services:
     restart: always
     ports:
       - '27017:27017'
+    security_opt:
+      - no-new-privileges
     container_name: mongo
     
