CW-138 Docker Security (#137)
* Clean up Dockerfiles.

* Prevent escalating privileges.

* Allow only read-only for containers.

* Remove read only from mongo container.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,8 +3,12 @@ services:
   production:
     image: production
     build: .
+    restart: always
     ports: 
       - '1323:1323'
+    security_opt:
+      - no-new-privileges
+    read_only: true
     depends_on:
       - mongo
     container_name: production
@@ -13,5 +17,7 @@ services:
     restart: always
     ports:
       - '27017:27017'
+    security_opt:
+      - no-new-privileges
     container_name: mongo
     
