--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
+        env:
+          TESTING_JWT: ${{ secrets.TESTING_JWT }}
+          
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
