--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,14 @@ jobs:
       - name: Building docker containers using docker-compose
         env:
           MAILJET_TOKEN: ${{ secrets.MAILJET_TOKEN }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          TESTING_JWT: ${{ secrets.TESTING_JWT }}
         run: docker-compose up -d --build backend mongo
       - name: Golang Tests
         run: go test ./...
         working-directory: ./backend/server
+        env:
+          TESTING_JWT: ${{ secrets.TESTING_JWT }} 
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
