--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
         environment: 
             - MAILJET_TOKEN=${MAILJET_TOKEN}
             - FB_TOKEN=${FB_TOKEN}
+            - JWT_SECRET=${JWT_SECRET}
+            - TESTING_JWT=${TESTING_JWT}
     mongo:
         image: mongo:latest
         restart: always
