fixing docker issue, check readme for updated command to run container

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,9 @@ version: "3"
 services:
     frontend:
         image: frontend
-        build: ./frontend
+        build: 
+            context: ./frontend
+            dockerfile: Dockerfile-dev
         ports:
             - '8080:8080'
         container_name: frontend
