--- a/frontend/.editorconfig
+++ b/frontend/.editorconfig
@@ -4,4 +4,5 @@ indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
-max_line_length = 100
+max_line_length = 110
+quote_type = single
