refactor: upgrade node version in docker images

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Base image node to install Vue dependencies
-FROM node:14.2 AS build-stage
+FROM node:14.13.1 AS build-stage
 
 WORKDIR /app
 
@@ -10,6 +10,6 @@ RUN yarn install
 # Build dependencies into dist folder, copy line may change as we restructure
 COPY . .
 RUN yarn build
-RUN npm install -g serve
+RUN npm ci -g serve
 ENTRYPOINT serve -s dist
 
