--- a/frontend/Dockerfile-dev
+++ b/frontend/Dockerfile-dev
@@ -1,11 +1,11 @@
 # Base image node to install Vue dependencies
-FROM node:14.2 AS build-stage
+FROM node:14.13.1 AS build-stage
 
 WORKDIR /app
 
 # Install dependencies in separate step to cache
 COPY package.json ./
-RUN yarn install
+RUN yarn install --frozen-lockfile
 
 # Build dependencies into dist folder, copy line may change as we restructure
 COPY . .
